# ffmpeg-cmake

./: CMakeLists.txt  README.md
prebuilt/lib/: libfdk-aac.la
prebuilt/lib/pkgconfig/: fdk-aac.pc  x264.pc
tests/: CMakeLists.txt
tests/swsscale_test/: CMakeLists.txt  sws_yuv2rgb.cpp
x264-master/: Makefile
